[package]
name = "librmrfd"
version = "0.1.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2021"
description = "System service to delete huge directory trees in background"
license = "GPL-3.0-or-later"
repository = "https://github.com/cehteh/rmrfd.git"
keywords = ["filesystem", "daemon", "unix"]

[dependencies]
openat_ct = "0.2.0-pre4"
log = "0.4"
easy-error = "1.0.0"

[dev-dependencies]
env_logger = "0.9"


[badges]
maintenance = { status = "actively-developed" }
