[package]
name = "librmrfd"
version = "0.1.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2021"
description = "System service to delete huge directory trees in background"
license = "GPL-3.0-or-later"
repository = "https://github.com/cehteh/rmrfd.git"
keywords = ["filesystem", "daemon", "unix"]

[dependencies]
dirinventory = "1.0.0-beta3"
log = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.11"

[dev-dependencies]
env_logger = "0.9"


[badges]
maintenance = { status = "actively-developed" }
